  * added help for most deinterlace methods
  * ffmpeg update
  * use ImageMagick to convert and display different type of images (png, jpg...)
  * improve ASX playlist parsing
  * add an extended MRL reference event (MRL title, start time, play time):
    needed for the ASX parser; deprecates plain MRL reference events.
  * goom updated to 2k4-0

xine-lib (1.0.3)
  * tiny doc update
  * build fixes and cross build improvements
  * fixed an align problem in Win32 DirectX video output plugin
              
xine-lib (1.0.2)
  * fixed playback of single-session Real RTSP streams, such as
    rtsp://stream.samurai.fm/broadcast/live_hi.rm
  * fixed xxmc / xvmc mocomp / IDCT rendering errors caused by the big update. 
  * support --enable-fpic with recent versions of gcc
  * clip goom fps value to >= 1 [bug #1193783]
  * fixed xvmc plugin segfault when it tried software blending on nonexistant xv image
  * cleaned up libmpeg2 behaviour on xxmc plugin abrupt software fallback
  * use -fno-inline-functions with gcc < 3.4.0 (bug known to be in 3.3.5)
  * fix xxmc plugin wanting to change vld xvmc context when stream changes from
    non-interlaced to interlaced [bug #1194350]
  * speed up xx44 alphablending of large transparent areas
  * stop libmpeg2 XvMC IDCT / MOCOMP attempting software motion compensation
    [bug #1194754]
  * improve xxmc cpu-usage for IDCT / MOCOMP acceleration through better locking
    [bug #1195282]
  * gcc4 build patches [bug #1175002]
  * don't assume that file is in /usr/bin (build fix) [bug #1195539]
  * plugin loader fixes - could cause xine to lock up hard on startup [bug #1196819]
  * Fix xxmc bob deinterlacing for field-coded interlaced streams
  * Fix LE_64/BE_64 macros on non-x86 plataforms. may fixes issues with some
    demuxers like avi, asf and ogg.
  * sputext improvements/workarounds
  * add a new error message when a file we tried to play is an empty
  (zero-sized) file
  * be more POSIX-compliant (head, tail) (build fix)